# e-voting-system

./: .gitignore  README.md  pyproject.toml
data/: questions_election.json  questions_referendum.json  voters.json
scripts/: generate_keys.py  reset_data.py  run_demo.py
src/: __init__.py  cli.py  crypto.py  exceptions.py  main.py  models.py  network.py  repositories.py  services.py
